--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -33,6 +33,9 @@ migrate_db:
     - kubectl apply -f helm/fastapi/alembic-migrate-job.yaml -n $NAMESPACE
     - sleep 20
     - kubectl logs job/alembic-migrate -n $NAMESPACE
+    - kubectl get pods -n $NAMESPACE
+    - kubectl describe pods -n $NAMESPACE
+    - kubectl logs pods -n $NAMESPACE
     - kubectl wait --for=condition=complete --timeout=180s job/alembic-migrate -n $NAMESPACE
     - kubectl delete job alembic-migrate -n $NAMESPACE
   only:
