--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,20 +14,20 @@ update:
     - pip install --upgrade pip
 #   - pip install -r requirements.txt
 
-# build:
-#   stage: build
-#   image: docker:latest
-#   services:
-#     - docker:dind
-#   script:
-#     - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USER" --password-stdin 
-#     - docker build -t "$DOCKER_REGISTRY_USER/fastapi-dev:latest" -f Dockerfile .
-#     - docker push "$DOCKER_REGISTRY_USER/fastapi-dev:latest"
-#     - docker build -t "$DOCKER_REGISTRY_USER/fastapi-prod:latest" -f Dockerfile.prod .
-#     - docker push "$DOCKER_REGISTRY_USER/fastapi-prod:latest"
-#     - docker build -t "$DOCKER_REGISTRY_USER/fastapi-traefik:latest" -f Dockerfile.traefik .
-#     - docker push "$DOCKER_REGISTRY_USER/fastapi-traefik:latest"
-#   when: manual # just for testing purposes
+build:
+  stage: build
+  image: docker:latest
+  services:
+    - docker:dind
+  script:
+    - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USER" --password-stdin 
+    - docker build -t "$DOCKER_REGISTRY_USER/fastapi-dev:latest" -f Dockerfile .
+    - docker push "$DOCKER_REGISTRY_USER/fastapi-dev:latest"
+    - docker build -t "$DOCKER_REGISTRY_USER/fastapi-prod:latest" -f Dockerfile.prod .
+    - docker push "$DOCKER_REGISTRY_USER/fastapi-prod:latest"
+    - docker build -t "$DOCKER_REGISTRY_USER/fastapi-traefik:latest" -f Dockerfile.traefik .
+    - docker push "$DOCKER_REGISTRY_USER/fastapi-traefik:latest"
+  when: manual # just for testing purposes
 
 # unit-test:
 #   stage: test
