--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -33,6 +33,7 @@ migrate_db:
     - kubectl delete job alembic-migrate -n $NAMESPACE
     - kubectl delete pods --all -n $NAMESPACE
     - kubectl apply -f helm/fastapi/alembic-migrate-job.yaml -n $NAMESPACE
+    - helm upgrade --install $RELEASE_NAME $CHART_DIR --set image.tag=$IMAGE_TAG
     - sleep 60
     - kubectl logs job/alembic-migrate -n $NAMESPACE
     - kubectl get pods -n $NAMESPACE
