--- a/Dockerfile.migrate
+++ b/Dockerfile.migrate
@@ -4,3 +4,4 @@ COPY . .
 RUN pip install --upgrade pip && pip install --user -r requirements.txt
 ENV PATH="/root/.local/bin:$PATH"
 ENV PYTHONPATH=.
+RUN cat /app/db.py
