--- a/helm/fastapi/templates/deployment.yaml
+++ b/helm/fastapi/templates/deployment.yaml
@@ -17,10 +17,11 @@ spec:
       serviceAccountName: {{ include "fastapi.serviceAccountName" . }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: DATABASE_URL
+              # value: {{ .Values.db.environment | first | quote }}
               value: "postgresql://{{ .Values.db.user }}:{{ .Values.db.password }}@{{ include "fastapi.fullname" . }}-db:{{ .Values.db.port }}/{{ .Values.db.database }}"
           ports:
             - name: http
