--- a/helm/fastapi/templates/deployment.yaml
+++ b/helm/fastapi/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: DATABASE_URL
-              value: "postgresql://{{ .Values.db.user }}:{{ .Values.db.password }}@{{ include "fastapi.fullname" . }}-db:{{ .Values.db.port }}/{{ .Values.db.database }}"
+              value: "postgresql://{{ .Values.db.user }}:{{ .Values.db.password | urlquery }}@{{ .Values.db.host | default (printf \"%s-db\" (include \"fastapi.fullname\" .)) }}:{{ .Values.db.port }}/{{ .Values.db.database }}"
           ports:
             - name: http
               containerPort: {{ .Values.containerPort }}
