--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -33,7 +33,13 @@ migrate_db:
     - kubectl delete job alembic-migrate -n $NAMESPACE
     - kubectl delete pods --all -n $NAMESPACE
     - kubectl apply -f helm/fastapi/alembic-migrate-job.yaml -n $NAMESPACE
-    - helm upgrade --install $RELEASE_NAME $CHART_DIR --set image.tag=$IMAGE_TAG --namespace $NAMESPACE
+    - if $BIN_DIR/helm status $RELEASE_NAME -n $NAMESPACE > /dev/null 2>&1; then
+        echo "Release $RELEASE_NAME exists in namespace $NAMESPACE, upgrading...";
+        $BIN_DIR/helm upgrade $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml --set image.tag=$IMAGE_TAG --set-string db.password="$DB_PASSWORD" --debug;
+     else
+       echo "Release $RELEASE_NAME does not exist in namespace $NAMESPACE, installing...";
+       $BIN_DIR/helm install $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE --create-namespace -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml --set image.tag=$IMAGE_TAG --set-string db.password="$DB_PASSWORD" --debug;
+     fi
     - sleep 60
     - kubectl logs job/alembic-migrate -n $NAMESPACE
     - kubectl get pods -n $NAMESPACE
