--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -55,6 +55,7 @@ migrate_db:
 
 deploy_prod:
   stage: deploy
+  image: sarialbebeto/fastapi-prod:latest
   tags:
     - traefik-fastapi-project
   needs: ["migrate_db"]
