--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -30,21 +30,14 @@ migrate_db:
   stage: migrate
   needs: ["build_image"]
   script:
-    - kubectl delete job alembic-migrate -n $NAMESPACE
+    - if kubectl get job alembic-migrate -n $NAMESPACE > /dev/null 2>&1; then kubectl delete job alembic-migrate -n $NAMESPACE; else echo "No existing alembic-migrate job to delete"; fi
     - kubectl delete pods --all -n $NAMESPACE
     - kubectl apply -f helm/fastapi/alembic-migrate-job.yaml -n $NAMESPACE
-    - if $BIN_DIR/helm status $RELEASE_NAME -n $NAMESPACE > /dev/null 2>&1; then
-        echo "Release $RELEASE_NAME exists in namespace $NAMESPACE, upgrading...";
-        $BIN_DIR/helm upgrade $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml --set image.tag=$IMAGE_TAG --set-string db.password="$DB_PASSWORD" --debug;
-     else
-       echo "Release $RELEASE_NAME does not exist in namespace $NAMESPACE, installing...";
-       $BIN_DIR/helm install $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE --create-namespace -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml --set image.tag=$IMAGE_TAG --set-string db.password="$DB_PASSWORD" --debug;
-     fi
     - sleep 60
-    - kubectl logs job/alembic-migrate -n $NAMESPACE
-    - kubectl get pods -n $NAMESPACE
-    - kubectl describe pods -n $NAMESPACE
-    - kubectl wait --for=condition=complete --timeout=200s job/alembic-migrate -n $NAMESPACE
+    # - kubectl logs job/alembic-migrate -n $NAMESPACE
+    # - kubectl get pods -n $NAMESPACE
+    # - kubectl describe pods -n $NAMESPACE
+    - kubectl wait --for=condition=complete --timeout=120s job/alembic-migrate -n $NAMESPACE
     - kubectl delete job alembic-migrate -n $NAMESPACE
   only:
     - main
