--- a/helm/fastapi/alembic-migrate-job.yaml
+++ b/helm/fastapi/alembic-migrate-job.yaml
@@ -10,6 +10,7 @@ spec:
       containers:
           - name: alembic
             image: sarialbebeto/alembic-migrate:latest
+            imagePullPolicy: Always
             command: ["sh", "-c"]
             args:
               - |
