--- a/Dockerfile.migrate
+++ b/Dockerfile.migrate
@@ -1,6 +1,7 @@
 FROM python:3.11-slim
 WORKDIR /workspace
 COPY . .
+RUN apt-get update && apt-get install -y postgresql-client
 RUN pip install --upgrade pip && pip install --user -r requirements.txt
 ENV PATH="/root/.local/bin:$PATH"
 ENV PYTHONPATH=.
