--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -35,6 +35,7 @@ migrate_db:
     - kubectl delete pods --all -n $NAMESPACE
     - kubectl apply -f helm/fastapi/alembic-migrate-job.yaml -n $NAMESPACE
     - sleep 60
+    - kubectl get secret fastapi-prod-db -n $NAMESPACE -o yaml
     - kubectl logs job/alembic-migrate -n $NAMESPACE
     # - kubectl get pods -n $NAMESPACE
     # - kubectl describe pods -n $NAMESPACE
