--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -39,6 +39,7 @@ migrate_db:
     - kubectl logs job/alembic-migrate -n $NAMESPACE
     - kubectl get pods -n $NAMESPACE
     # - kubectl describe pods -n $NAMESPACE
+    - kubectl wait --for=condition=ready pod -l role=db -n $NAMESPACE --timeout=120s
     - kubectl wait --for=condition=complete --timeout=120s job/alembic-migrate -n $NAMESPACE
     - kubectl delete job alembic-migrate -n $NAMESPACE
   only:
