--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -33,12 +33,12 @@ migrate_db:
   script:
     - if kubectl get job alembic-migrate -n $NAMESPACE > /dev/null 2>&1; then kubectl delete job alembic-migrate -n $NAMESPACE; else echo "No existing alembic-migrate job to delete"; fi
     - kubectl delete pods --all -n $NAMESPACE
+    - kubectl delete pvc -l app.kubernetes.io/instance=fastapi-prod -n $NAMESPACE
     - kubectl apply -f helm/fastapi/alembic-migrate-job.yaml -n $NAMESPACE
     - sleep 60
     - kubectl get secret fastapi-prod-db -n $NAMESPACE -o yaml
     - kubectl logs job/alembic-migrate -n $NAMESPACE
     - kubectl get pods -n $NAMESPACE
-    # - kubectl describe pods -n $NAMESPACE
     - kubectl wait --for=condition=ready pod -l role=db -n $NAMESPACE --timeout=120s
     - kubectl wait --for=condition=complete --timeout=120s job/alembic-migrate -n $NAMESPACE
     - kubectl delete job alembic-migrate -n $NAMESPACE
