--- a/alembic.ini
+++ b/alembic.ini
@@ -1,4 +1,4 @@
-# Alembic configuration file
+# Alembic configuration file for database migrations
 [alembic]
 script_location = alembic
 sqlalchemy.url = postgresql://fastapi_traefik_prod:fastapi_traefik_prod@fastapi-prod-db:5432/fastapi_traefik_prod
