--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -31,6 +31,9 @@ migrate_db:
   stage: migrate
   needs: ["build_image"]
   script:
+  # before migration
+  # - kubectl delete pvc -l app.kubernetes.io/instance=fastapi-prod -n $NAMESPACE
+  # - kubectl delete pod -l role=db -n $NAMESPACE
   # Wait for DB pod to be ready before migration
   - kubectl wait --for=condition=ready pod -l role=db -n $NAMESPACE --timeout=180s
   # Clean up any previous migration job
@@ -41,13 +44,10 @@ migrate_db:
   - kubectl wait --for=condition=complete --timeout=180s job/alembic-migrate -n $NAMESPACE
   # Show migration logs
   - kubectl logs job/alembic-migrate -n $NAMESPACE
-  # Delete migration job after success
-  # - kubectl delete job alembic-migrate -n $NAMESPACE
   # Delete all app pods to force new pods to connect to the up-to-date DB
   - kubectl delete pods -l app.kubernetes.io/name=fastapi -n $NAMESPACE || true
   # Restart app deployment to ensure it picks up new DB state
   - kubectl rollout restart deployment/$RELEASE_NAME -n $NAMESPACE
-  - kubectl delete pods -l app.kubernetes.io/name=fastapi -n $NAMESPACE 
   only:
     - main
   tags:
@@ -86,12 +86,10 @@ deploy_prod:
     - mv /tmp/linux-amd64/helm $BIN_DIR/helm
     - chmod +x $BIN_DIR/helm
     - $BIN_DIR/helm version
-    #- echo "Runner=$CI_RUNNER_DESCRIPTION"
     - echo "Using KUBECONFIG=$KUBECONFIG"
     - $BIN_DIR/kubectl config view --minify -o jsonpath='{.clusters[0].cluster.server}'; echo
-    #- $BIN_DIR/kubectl version
     - $BIN_DIR/kubectl get nodes
-    - echo "Password=$DB_PASSWORD"
+    #- echo "Password=$DB_PASSWORD"
     - export DB_PASSWORD_PROD=$DB_PASSWORD
     - export DB_PASSWORD="$DB_PASSWORD_PROD"
   script:
@@ -110,7 +108,6 @@ deploy_prod:
         $BIN_DIR/helm uninstall traefik -n kube-system || true;
         $BIN_DIR/helm upgrade --install traefik traefik/traefik --namespace kube-system --create-namespace --timeout 10m0s --atomic --set service.type=LoadBalancer;
       fi
-    - $BIN_DIR/kubectl delete pods --all -n $NAMESPACE || true
     - $BIN_DIR/helm uninstall $RELEASE_NAME -n $NAMESPACE || true
     - $BIN_DIR/kubectl delete pvc -l app.kubernetes.io/instance=$RELEASE_NAME -n $NAMESPACE || true
     - $BIN_DIR/helm template $RELEASE_NAME $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml
