--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -52,7 +52,7 @@ migrate_db:
   only:
     - main
   tags:
-    - traefik-fastapi-project
+    - runner-treafik 
   allow_failure: false
   when: on_success
 
@@ -60,7 +60,7 @@ deploy_prod:
   stage: deploy
   image: sarialbebeto/fastapi-prod:latest
   tags:
-    - traefik-fastapi-project
+    - runner-treafik 
   needs: ["migrate_db"]
   before_script:
     - whoami
