--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -52,7 +52,7 @@ migrate_db:
   only:
     - main
   tags:
-    - traefik-fastapi-project 
+    - traefik-fastapi-project
   allow_failure: false
   when: on_success
 
@@ -60,7 +60,7 @@ deploy_prod:
   stage: deploy
   image: sarialbebeto/fastapi-prod:latest
   tags:
-    - traefik-fastapi-project 
+    - traefik-fastapi-project
   needs: ["migrate_db"]
   before_script:
     - whoami
@@ -109,7 +109,6 @@ deploy_prod:
         $BIN_DIR/helm upgrade --install traefik traefik/traefik --namespace kube-system --create-namespace --timeout 10m0s --atomic --set service.type=LoadBalancer;
       fi
     - $BIN_DIR/helm uninstall $RELEASE_NAME -n $NAMESPACE || true
-    - $BIN_DIR/kubectl delete pvc -l app.kubernetes.io/instance=$RELEASE_NAME -n $NAMESPACE || true
     - $BIN_DIR/helm template $RELEASE_NAME $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml
     - if $BIN_DIR/helm status $RELEASE_NAME -n $NAMESPACE > /dev/null 2>&1; then
         echo "Release $RELEASE_NAME exists in namespace $NAMESPACE, upgrading...";
@@ -118,7 +117,7 @@ deploy_prod:
        echo "Release $RELEASE_NAME does not exist in namespace $NAMESPACE, installing...";
        $BIN_DIR/helm install $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE --create-namespace -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml --set image.tag=$IMAGE_TAG --set-string db.password="$DB_PASSWORD" --debug;
      fi
-    - sleep 60   # give the cluster time to start the pods
+    - sleep 60 # give the cluster some time to start the pods
     - $BIN_DIR/helm list -n $NAMESPACE
     - $BIN_DIR/kubectl get ns
     - $BIN_DIR/kubectl get pods -n $NAMESPACE
