routing HTTP for testing purpose

--- a/helm/fastapi/values-prod.yaml
+++ b/helm/fastapi/values-prod.yaml
@@ -31,18 +31,17 @@ ingress:
   enabled: true
   className: "traefik"
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.tls: "true"
+    #traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    # traefik.ingress.kubernetes.io/router.tls: "true"
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.tls: "false"
     traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
   hosts:
     - host: fastapi-traefik.prod-fastapi.ddns-ip.net
       paths:
         - path: /
           pathType: Prefix
-  tls:
-    - secretName: prod-tls
-      hosts:
-        - fastapi-traefik.prod-fastapi.ddns-ip.net
+  # tls: []  # TLS temporarily disabled for debugging
 
 db:
   image:
