--- a/.gitlab-ci-k8s-prod.yml
+++ b/.gitlab-ci-k8s-prod.yml
@@ -109,7 +109,7 @@ deploy_prod:
         $BIN_DIR/helm upgrade --install traefik traefik/traefik --namespace kube-system --create-namespace --timeout 10m0s --atomic --set service.type=LoadBalancer;
       fi
     - $BIN_DIR/helm uninstall $RELEASE_NAME -n $NAMESPACE || true
-    - $BIN_DIR/helm template $RELEASE_NAME $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml
+    # - $BIN_DIR/helm template $RELEASE_NAME $CHART_DIR -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml
     - if $BIN_DIR/helm status $RELEASE_NAME -n $NAMESPACE > /dev/null 2>&1; then
         echo "Release $RELEASE_NAME exists in namespace $NAMESPACE, upgrading...";
         $BIN_DIR/helm upgrade $RELEASE_NAME $CHART_DIR --namespace $NAMESPACE -f $CHART_DIR/values.yaml -f $CHART_DIR/values-prod.yaml --set image.tag=$IMAGE_TAG --set-string db.password="$DB_PASSWORD" --debug;
@@ -120,8 +120,8 @@ deploy_prod:
     - sleep 60 # give the cluster some time to start the pods
     - $BIN_DIR/helm list -n $NAMESPACE
     - $BIN_DIR/kubectl get ns
-    - $BIN_DIR/kubectl get pods -n $NAMESPACE
-    - $BIN_DIR/kubectl describe pods -n $NAMESPACE
+    # - $BIN_DIR/kubectl get pods -n $NAMESPACE
+    # - $BIN_DIR/kubectl describe pods -n $NAMESPACE
     - $BIN_DIR/kubectl get svc -n $NAMESPACE
     - $BIN_DIR/kubectl get statefulset -n $NAMESPACE
     - $BIN_DIR/kubectl logs deployment/$RELEASE_NAME -n $NAMESPACE --tail=100
