--- a/helm/fastapi/values-dev.yaml
+++ b/helm/fastapi/values-dev.yaml
@@ -1,4 +1,6 @@
+
 replicaCount: 1
+
 
 image:
   repository: sarialbebeto/fastapi-dev
@@ -22,45 +24,47 @@ podSecurityContext: {}
 
 securityContext: {}
 
+
 containerPort: 8000
 service:
   type: ClusterIP
   port: 8000
   targetPort: 8000
 
+
 ingress:
   enabled: true
   className: "traefik"
-  annotations: 
+  annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
-
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
   hosts:
-    - host: dev-example.com
+    - host: fastapi-traefik.dev-fastapi.ddns-ip.net
       paths:
         - path: /
           pathType: Prefix
-  tls: 
-    - secretName: dev-tls
-      hosts:
-        - dev-example.com
+  # tls: []  # Traefik manages TLS for dev as well
 
-web:
- env:
-  - name: ENV
-    value: dev
 
-web:
-  containerPort: 8000
-  readinessProbe:
-    httpGet:
-      path: /docs
-      port: 8000
-  livenessProbe:
-    httpGet:
-      path: /
-      port: 8000
+livenessProbe:
+  httpGet:
+    path: /
+    port: 8000
 
-resources: {}
+readinessProbe:
+  httpGet:
+    path: /
+    port: 8000
+
+
+resources:
+  limits:
+    cpu: 500m
+    memory: 1024Mi
+  requests:
+    cpu: 200m
+    memory: 512Mi
 
 autoscaling:
   enabled: false
@@ -68,14 +72,25 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
 
+
 db:
+  image:
+    repository: postgres
+    tag: "17-alpine"
+    pullPolicy: IfNotPresent
   port: 5432
   user: fastapi_traefik
   password: fastapi_traefik
   database: fastapi_traefik
+  host: fastapi-dev-db
+  storage:
+    size: 5Gi
+    storageClassName: ""
+  environment:
+    - DATABASE_URL=postgresql://fastapi_traefik:fastapi_traefik@fastapi-dev-db:5432/fastapi_traefik
+
 
 volumes: []
-
 volumeMounts: []
 
 nodeSelector: {}
