--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -78,13 +78,26 @@ smoke-test:
     # --- Smoke test with container ---
     - echo "Building and running Docker container for smoke tests"
     - apk add --no-cache curl
-    - docker-compose -f docker-compose.yml up -d --build
+    - docker-compose -f docker-compose.yml up -d db
+    - |
+      docker run --rm \
+        --network "$(docker network ls --filter name=_default --format '{{.Name}}')" \
+        -e DATABASE_URL=postgresql://fastapi_traefik:fastapi_traefik@db:5432/fastapi_traefik \
+        sarialbebeto/alembic-migrate:latest \
+        sh -c "\
+          until pg_isready -h db -p 5432 -U fastapi_traefik; do \
+            echo 'Waiting for Postgres...'; \
+            sleep 5; \
+          done; \
+          alembic upgrade head \
+        "
+    - docker-compose -f docker-compose.yml up -d --build web traefik
     - docker ps -a
-    - docker exec devops-project-web-1 sh -c "pip install uvicorn[standard]" 
+    - docker exec devops-project-web-1 sh -c "pip install uvicorn[standard]"
     - docker-compose logs web
     - sleep 15  # Wait for the app to start
     - docker-compose exec -T web curl -f http://web:8000/ || (echo "Health check failed!" && exit 1)
-    - docker-compose exec -T web curl -f http://web:8000/docs 
+    - docker-compose exec -T web curl -f http://web:8000/docs
     - docker-compose logs
     - docker-compose down
   only:
