--- a/.gitlab-ci-docker.yml
+++ b/.gitlab-ci-docker.yml
@@ -23,7 +23,8 @@ update:
   artifacts:
     paths:
       - .venv/
-    expire_in: 1 hour  
+    expire_in: 1 hour
+  when: manual
 
 build:
   stage: build
@@ -40,6 +41,7 @@ build:
     - docker push "$DOCKER_REGISTRY_USER/fastapi-traefik:$IMAGE_TAG"
   only:
     - main
+  when: manual
 
 unit-test:
   stage: test
@@ -79,9 +81,7 @@ smoke-test:
     - echo "Building and running Docker container for smoke tests"
     - apk add --no-cache curl
     - docker-compose -f docker-compose.yml up -d db
-    # Build local migration image
     - docker build -t devops-project-migrate -f Dockerfile.migrate .
-    # Run migrations using local image and correct DATABASE_URL
     - |
       docker run --rm \
         --network "$(docker network ls --filter name=_default --format '{{.Name}}')" \
@@ -113,9 +113,27 @@ deploy_dev:
     - docker:dind
   script:
    - echo "Deploying to Dev..."
-   - docker-compose -f docker-compose.yml up -d --build
-    # wait for services to start
-   - sleep 15 
+   # Start only the db service
+   - docker-compose -f docker-compose.yml up -d db
+   # Build local migration image
+   - docker build -t devops-project-migrate -f Dockerfile.migrate .
+   # Run migrations using local image and correct DATABASE_URL
+   - |
+     docker run --rm \
+       --network "$(docker network ls --filter name=_default --format '{{.Name}}')" \
+       -e DATABASE_URL=postgresql://fastapi_traefik:fastapi_traefik@db:5432/fastapi_traefik \
+       devops-project-migrate \
+       sh -c "\
+         until pg_isready -h db -p 5432 -U fastapi_traefik; do \
+           echo 'Waiting for Postgres...'; \
+           sleep 5; \
+         done; \
+         alembic upgrade head \
+       "
+   # Start web and traefik
+   - docker-compose -f docker-compose.yml up -d --build web traefik
+   # wait for services to start
+   - sleep 15
    - docker-compose ps
    - docker-compose logs web
    - docker-compose exec -T web curl -f http://web:8000/ || (echo "Health check failed!" && exit 1)
@@ -135,7 +153,25 @@ deploy_prod:
     - docker:dind
   script:
    - echo "Deploying to Production..."
-   - docker-compose -f docker-compose.prod.yml up -d --build
+   # Start only the db service
+   - docker-compose -f docker-compose.prod.yml up -d db
+   # Build local migration image
+   - docker build -t devops-project-migrate -f Dockerfile.migrate .
+   # Run migrations using local image and correct prod DATABASE_URL
+   - |
+     docker run --rm \
+       --network "$(docker network ls --filter name=_default --format '{{.Name}}')" \
+       -e DATABASE_URL=postgresql://fastapi_traefik_prod:fastapi_traefik_prod@fastapi-prod-db:5432/fastapi_traefik_prod \
+       devops-project-migrate \
+       sh -c "\
+         until pg_isready -h fastapi-prod-db -p 5432 -U fastapi_traefik_prod; do \
+           echo 'Waiting for Postgres...'; \
+           sleep 5; \
+         done; \
+         alembic upgrade head \
+       "
+   # Start web and traefik
+   - docker-compose -f docker-compose.prod.yml up -d --build web traefik
    # wait for services to start
    - sleep 20
    - docker-compose ps
