--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ update:
   image: python:3.11
   script:
     - pip install --upgrade pip
-#   - pip install -r requirements.txt
+    - pip install -r requirements.txt
 
 build:
   stage: build
@@ -24,8 +24,7 @@ build:
     - docker push "$DOCKER_REGISTRY_USER/fastapi-prod:latest"
     - docker build --no-cache -t "$DOCKER_REGISTRY_USER/fastapi-traefik:latest" -f Dockerfile.traefik .
     - docker push "$DOCKER_REGISTRY_USER/fastapi-traefik:latest"
-  when: manual
-  
+
 # unit-test:
 #   stage: test
 #   image: python:3.11-slim
