alembic migration image changed

--- a/helm/fastapi/alembic-migrate-job-dev.yaml
+++ b/helm/fastapi/alembic-migrate-job-dev.yaml
@@ -9,7 +9,7 @@ spec:
       restartPolicy: Never
       containers:
         - name: alembic
-          image: sarialbebeto/alembic-migrate:dev
+          image: sarialbebeto/alembic-migrate:latest
           imagePullPolicy: Always
           command: ["sh", "-c"]
           args:
