--- a/.gitlab-ci-k8s-dev.yml
+++ b/.gitlab-ci-k8s-dev.yml
@@ -15,13 +15,13 @@ variables:
 
 build_image:
   stage: build
-  image: docker:latest
+  image: docker:$IMAGE_TAG
   services:
     - docker:dind
   script:
     - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USER" --password-stdin
-    - docker build --no-cache -f Dockerfile.migrate -t "$DOCKER_REGISTRY_USER/alembic-migrate:latest" .
-    - docker push "$DOCKER_REGISTRY_USER/alembic-migrate:latest"
+    - docker build --no-cache -f Dockerfile.migrate -t "$DOCKER_REGISTRY_USER/alembic-migrate:$IMAGE_TAG" .
+    - docker push "$DOCKER_REGISTRY_USER/alembic-migrate:$IMAGE_TAG"
   only:
     - dev
   allow_failure: false
