database url updated

--- a/helm/fastapi/alembic-migrate-job-dev.yaml
+++ b/helm/fastapi/alembic-migrate-job-dev.yaml
@@ -14,11 +14,11 @@ spec:
           command: ["sh", "-c"]
           args:
             - |
-              until pg_isready -h fastapi-dev-db -p 5432 -U fastapi_traefik; do
+              until pg_isready -h db -p 5432 -U fastapi_traefik; do
                 echo 'Waiting for Postgres...'
                 sleep 10
               done
-              export DATABASE_URL="postgresql://fastapi_traefik:${DB_PASSWORD}@fastapi-dev-db:5432/fastapi_traefik"
+              export DATABASE_URL="postgresql://fastapi_traefik:${DB_PASSWORD}@db:5432/fastapi_traefik"
               echo "DATABASE_URL=$DATABASE_URL"
               cd /workspace
               echo "Alembic versions:"
