--- a/helm/fastapi/alembic-migrate-job-dev.yaml
+++ b/helm/fastapi/alembic-migrate-job-dev.yaml
@@ -3,7 +3,9 @@ kind: Job
 metadata:
   name: alembic-migrate
   namespace: dev
-spec:
+  template:
+    spec:
+      restartPolicy: Never
       containers:
         - name: alembic
           image: sarialbebeto/alembic-migrate:dev
