--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ update:
   script:
     - pip install --upgrade pip
     - pip install -r requirements.txt
+  when: manual
 
 build:
   stage: build
