--- a/.gitlab-ci-k8s-dev.yml
+++ b/.gitlab-ci-k8s-dev.yml
@@ -81,7 +81,7 @@ deploy_dev:
     - chmod +x kubectl
     - mv kubectl /usr/local/bin/
     - helm version
-    # - kubectl version
+    - kubectl version
     - export DB_PASSWORD="$DB_PASSWORD_DEV"
   script:
     - helm repo add traefik https://traefik.github.io/charts
