--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -9,6 +9,8 @@ RUN apt-get install -y postgresql-client && rm -rf /var/lib/apt/lists/*
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
+RUN pip install --upgrade pip
+
 RUN apt-get update && apt-get install -y curl
 
 #RUN apt-get install -y docker-compose
