--- a/fastapi-deployment-prod/templates/deployment.yaml
+++ b/fastapi-deployment-prod/templates/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "fastapi.fullname" . }}
+  name: {{ include "fastapi-deployment-prod.fullname" . }}
   labels:
-    {{- include "fastapi.labels" . | nindent 4 }}
+    {{- include "fastapi-deployment-prod.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "fastapi.selectorLabels" . | nindent 6 }}
+      {{- include "fastapi-deployment-prod.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "fastapi.labels" . | nindent 8 }}
+        {{- include "fastapi-deployment-prod.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ include "fastapi.serviceAccountName" . }}
+      serviceAccountName: {{ include "fastapi-deployment-prod.serviceAccountName" . }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
