--- a/fastapi-deployment/templates/secret-db.yaml
+++ b/fastapi-deployment/templates/secret-db.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "fastapi.fullname" . }}-db
+  name: {{ include "fastapi-deployment-prod.fullname" . }}-db
 type: Opaque
 stringData:
   POSTGRES_USER: {{ .Values.db.user | quote }}
