--- a/fastapi-deployment/templates/deployment.yaml
+++ b/fastapi-deployment/templates/deployment.yaml
@@ -19,12 +19,16 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          env:
-            - name: DATABASE_URL
-              value: "postgresql://{{ .Values.db.user }}:{{ .Values.db.password }}@{{ .Values.db.host }}:{{ .Values.db.port }}/{{ .Values.db.database }}"
+          ports:
             - name: http
               containerPort: {{ .Values.containerPort }}
               protocol: TCP
+          env:
+            - name: DATABASE_URL
+              value: "postgresql://{{ .Values.db.user }}:{{ .Values.db.password }}@{{ .Values.db.host }}:{{ .Values.db.port }}/{{ .Values.db.database }}"
+          envFrom:
+            - secretRef:
+                name: {{ include "fastapi-deployment.fullname" . }}-db
           livenessProbe:
             httpGet:
               path: {{ .Values.livenessProbe.httpGet.path }}
